adding Eg operators

--- a/su4_baryon_udud.ipynb
+++ b/su4_baryon_udud.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,76 @@
     "\n",
     "\n",
     "for i,op in enumerate(utils.operators('A1g', rep, oh)):\n",
-    "    print_op_to_file(op, basis,\"baryon_udud_A1g_{}_.txt\".format(i))"
+    "    print_op_to_file(op, basis,\"baryon_udud_A1g_{}_.txt\".format(i))\n",
+    "    \n",
+    "for i,op in enumerate(utils.operators('Eg', rep, oh)):\n",
+    "    print_op_to_file(op, basis,\"baryon_udud_Eg_{}_.txt\".format(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gamma_0\n",
+      "0 0 1 1 (1+0j)\n",
+      "0 1 0 1 (-0.5+0j)\n",
+      "1 0 1 0 (-0.5+0j)\n",
+      "-----------------\n",
+      "gamma_1\n",
+      "0 0 3 3 (1+0j)\n",
+      "0 1 3 2 (-1+0j)\n",
+      "1 0 2 3 (-1+0j)\n",
+      "1 1 2 2 (1+0j)\n",
+      "-----------------\n",
+      "gamma_2\n",
+      "0 1 2 3 (1+0j)\n",
+      "0 1 3 2 (-1+0j)\n",
+      "1 0 2 3 (-1+0j)\n",
+      "1 0 3 2 (1+0j)\n",
+      "-----------------\n",
+      "gamma_3\n",
+      "0 2 1 3 (1+0j)\n",
+      "0 3 0 3 (-0.5+0j)\n",
+      "1 2 1 2 (-0.5+0j)\n",
+      "-----------------\n",
+      "gamma_4\n",
+      "2 0 3 1 (1+0j)\n",
+      "2 1 2 1 (-0.5+0j)\n",
+      "3 0 3 0 (-0.5+0j)\n",
+      "-----------------\n",
+      "gamma_5\n",
+      "2 2 3 3 (1+0j)\n",
+      "2 3 2 3 (-0.5+0j)\n",
+      "3 2 3 2 (-0.5+0j)\n",
+      "-----------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_nonzero(vec, basis):\n",
+    "\n",
+    "  v = copy.deepcopy(basis)\n",
+    "  for i in range(len(vec)):\n",
+    "    v[i].coef *= vec[i]\n",
+    "\n",
+    "  text=\"\"\n",
+    "  for i in range(len(v)):\n",
+    "    if not np.isclose(v[i].coef, 0):\n",
+    "        line = \"\"\n",
+    "        for q in v[i].quarks:\n",
+    "            line += str(q.spin) + \" \"\n",
+    "        line += str(v[i].coef)\n",
+    "        print(line)\n",
+    "\n",
+    "for i,op in enumerate(utils.operators('A1g', rep, oh)):\n",
+    "    print(\"gamma_{}\".format(i))\n",
+    "    print_nonzero(op, basis)\n",
+    "    print(\"-----------------\")\n"
    ]
   },
   {
