--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "uQ = lambda spin : Quark({'bar': False, 'flavor': 0, 'color': 0, 'spin': spin})"
+    "uQ = lambda spin : Quark({'bar': False, 'flavor': 0, 'color': 0, 'spin': spin})\n",
+    "uQBar = lambda spin: Quark({'bar': True, 'flavor': 0, 'color': 0, 'spin': spin})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +229,7 @@
        "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +249,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +260,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.+1.j,  1.+1.j, -1.+1.j,  1.+1.j,  1.-1.j,  1.+1.j,  1.-1.j,\n",
+       "       -1.+1.j,  1.+1.j,  1.-1.j, -1.-1.j,  1.-1.j, -1.-1.j,  1.+1.j,\n",
+       "        1.-1.j, -1.-1.j, -1.+1.j,  1.+1.j,  1.-1.j, -1.-1.j],\n",
+       "      dtype=complex64)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np.diag(makeRepMat(o2h.elements[22], basis, allSpinsToBasis))*math.sqrt(2)).round(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +292,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +372,7 @@
        "      dtype=complex64)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -375,21 +408,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.99999994+0.j, -2.9999998 +0.j,  0.        +0.j,  0.        +0.j,\n",
-       "        2.9999998 +0.j,  0.        +0.j,  0.        +0.j,  0.        +0.j,\n",
-       "        0.        +0.j,  0.        +0.j, -0.99999994+0.j,  0.        +0.j,\n",
-       "        0.        +0.j,  0.        +0.j,  0.        +0.j,  0.        +0.j,\n",
-       "        0.        +0.j,  0.        +0.j,  0.        +0.j,  0.        +0.j],\n",
+       "array([ 2.828427+0.j, -8.485281+0.j,  0.      +0.j,  0.      +0.j,\n",
+       "        8.485281+0.j,  0.      +0.j,  0.      +0.j,  0.      +0.j,\n",
+       "        0.      +0.j,  0.      +0.j, -2.828427+0.j,  0.      +0.j,\n",
+       "        0.      +0.j,  0.      +0.j,  0.      +0.j,  0.      +0.j,\n",
+       "        0.      +0.j,  0.      +0.j,  0.      +0.j,  0.      +0.j],\n",
        "      dtype=complex64)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,16 +433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.70710678+0.j, -0.70710678+0.j,  0.        +0.j,  0.        +0.j])"
+       "[(0.7071067811865476+0j), (-0.7071067811865476+0j), 0j, 0j]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,46 +453,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.+0.j,  1.+0.j,  0.+0.j,  0.+0.j],\n",
-       "       [-1.+0.j,  1.+0.j,  0.+0.j,  0.+0.j],\n",
-       "       [ 0.+0.j,  0.+0.j,  1.+0.j,  1.+0.j],\n",
-       "       [ 0.+0.j,  0.+0.j, -1.+0.j,  1.+0.j]])"
+       "array([[ 1.+0.j, -1.+0.j,  0.+0.j,  0.+0.j],\n",
+       "       [ 1.+0.j,  1.+0.j,  0.+0.j,  0.+0.j],\n",
+       "       [ 0.+0.j,  0.+0.j,  1.+0.j, -1.+0.j],\n",
+       "       [ 0.+0.j,  0.+0.j,  1.+0.j,  1.+0.j]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.eye(4)+np.matmul(gammas[3],gammas[1])"
+    "np.eye(4)-np.matmul(gammas[3],gammas[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "[(0.7071067811865476+0j), (-0.7071067811865476+0j), 0j, 0j]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "q=uQ(0)\n",
-    "q.barred"
+    "uQBar(0).spatial_rotate(o2h.elements[20])"
    ]
   },
   {
@@ -471,30 +503,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "metric = np.matrix([[0. for j in range(len(rep[0]))] for i in range(len(rep[0]))], dtype='complex')\n",
     "for g in rep:\n",
     "  metric += np.matmul(np.matrix(g).getH(), np.matrix(g))\n",
-    "metric = metric/len(o2h.elements)"
+    "metric = (metric/len(o2h.elements)).round(8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6.+0.j, 2.-0.j, 4.-0.j, 4.-0.j, 2.+0.j, 2.-0.j, 2.-0.j, 4.-0.j,\n",
-       "       2.-0.j, 4.+0.j, 6.-0.j, 4.+0.j, 4.+0.j, 4.-0.j, 2.-0.j, 4.+0.j,\n",
+       "0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.count_nonzero(metric - np.diag(np.diagonal(metric)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6.+0.j, 2.+0.j, 4.+0.j, 4.+0.j, 2.+0.j, 2.+0.j, 2.+0.j, 4.+0.j,\n",
+       "       2.+0.j, 4.+0.j, 6.+0.j, 4.+0.j, 4.+0.j, 4.+0.j, 2.+0.j, 4.+0.j,\n",
        "       6.+0.j, 2.+0.j, 2.+0.j, 6.+0.j])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
