--- a/uuuu.ipynb
+++ b/uuuu.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "8"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "(35, 35)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -205,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.25+0j)"
+       "(0.25-0j)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -258,6 +258,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1+0j)*u_{a,0}*u_{a,3}*u_{a,3}*u_{a,0}+(-2+0j)*u_{a,1}*u_{a,2}*u_{a,3}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,2}*u_{a,2}*u_{a,1}+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for op in operators('A1g', rep, oh):\n",
+    "    print_vec(op, basis)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -278,25 +298,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1+0j)*u_{a,0}*u_{a,0}*u_{a,0}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,1}*u_{a,1}*u_{a,1}+\n",
+      "(1+0j)*u_{a,0}*u_{a,0}*u_{a,0}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,1}*u_{a,1}*u_{a,1}+(1+0j)*u_{a,2}*u_{a,2}*u_{a,2}*u_{a,2}+(1+0j)*u_{a,3}*u_{a,3}*u_{a,3}*u_{a,3}\n",
+      "\n",
+      "(1+0j)*u_{a,0}*u_{a,0}*u_{a,2}*u_{a,0}+(1+0j)*u_{a,2}*u_{a,2}*u_{a,2}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,1}*u_{a,3}*u_{a,1}+(1+0j)*u_{a,3}*u_{a,3}*u_{a,3}*u_{a,1}+\n",
       "\n",
       "(1+0j)*u_{a,0}*u_{a,2}*u_{a,2}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,3}*u_{a,3}*u_{a,1}+\n",
       "\n",
-      "(1+0j)*u_{a,2}*u_{a,2}*u_{a,2}*u_{a,2}+(1+0j)*u_{a,3}*u_{a,3}*u_{a,3}*u_{a,3}\n",
-      "\n",
       "-----------------------------\n",
-      "(1+0j)*u_{a,0}*u_{a,1}*u_{a,1}*u_{a,0}+\n",
+      "(1+0j)*u_{a,0}*u_{a,1}*u_{a,1}*u_{a,0}+(1+0j)*u_{a,2}*u_{a,3}*u_{a,3}*u_{a,2}+\n",
+      "\n",
+      "(1+0j)*u_{a,0}*u_{a,1}*u_{a,3}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,1}*u_{a,2}*u_{a,0}+(1+0j)*u_{a,2}*u_{a,3}*u_{a,3}*u_{a,0}+(1+0j)*u_{a,2}*u_{a,2}*u_{a,3}*u_{a,1}+\n",
       "\n",
       "(1+0j)*u_{a,0}*u_{a,3}*u_{a,3}*u_{a,0}+(4+0j)*u_{a,1}*u_{a,2}*u_{a,3}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,2}*u_{a,2}*u_{a,1}+\n",
-      "\n",
-      "(1+0j)*u_{a,2}*u_{a,3}*u_{a,3}*u_{a,2}+\n",
       "\n"
      ]
     }
@@ -313,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
