--- a/testing_uuu.ipynb
+++ b/testing_uuu.ipynb
@@ -698,7 +698,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('LQCD')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -712,12 +712,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8 (main, Nov  1 2022, 14:18:21) [GCC 12.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bc10d092fd53d999667fa6c0a0e497da5d6cd5236cea8e58c3ad41d37fd15ec4"
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
    }
   }
  },
