--- a/ubububub.ipynb
+++ b/ubububub.ipynb
@@ -61,7 +61,7 @@
     "    quarks=[]\n",
     "    tmp=i\n",
     "    for s in range(NC):\n",
-    "        quarks.append(uQ(tmp%NS))\n",
+    "        quarks.append(uQBar(tmp%NS))\n",
     "        tmp=tmp//NS\n",
     "    # match order according to equation 4.66\n",
     "    quarks[0], quarks[2] = quarks[2], quarks[0]\n",
@@ -211,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.25-0j)"
+       "(0.25+0j)"
       ]
      },
      "execution_count": 11,
@@ -265,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1+0j)*u_{a,0}*u_{a,3}*u_{a,3}*u_{a,0}+(-2+0j)*u_{a,1}*u_{a,2}*u_{a,3}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,2}*u_{a,2}*u_{a,1}+\n",
+      "(1+0j)*\\bar{u}_{a,0}*\\bar{u}_{a,3}*\\bar{u}_{a,3}*\\bar{u}_{a,0}+(-2+0j)*\\bar{u}_{a,1}*\\bar{u}_{a,2}*\\bar{u}_{a,3}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,1}*\\bar{u}_{a,2}*\\bar{u}_{a,2}*\\bar{u}_{a,1}+\n",
       "\n"
      ]
     }
@@ -273,7 +273,8 @@
    "source": [
     "for op in operators('A1g', rep, oh):\n",
     "    print_vec(op, basis)\n",
-    "    print()"
+    "    print()\n",
+    "    "
    ]
   },
   {
@@ -285,7 +286,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1+0j)*u_{a,0}*u_{a,3}*u_{a,3}*u_{a,0}+(-2+0j)*u_{a,1}*u_{a,2}*u_{a,3}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,2}*u_{a,2}*u_{a,1}+\n",
+      "(1+0j)*\\bar{u}_{a,0}*\\bar{u}_{a,3}*\\bar{u}_{a,3}*\\bar{u}_{a,0}+(-2+0j)*\\bar{u}_{a,1}*\\bar{u}_{a,2}*\\bar{u}_{a,3}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,1}*\\bar{u}_{a,2}*\\bar{u}_{a,2}*\\bar{u}_{a,1}+\n",
       "\n"
      ]
     }
@@ -305,18 +306,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1+0j)*u_{a,0}*u_{a,0}*u_{a,0}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,1}*u_{a,1}*u_{a,1}+(1+0j)*u_{a,2}*u_{a,2}*u_{a,2}*u_{a,2}+(1+0j)*u_{a,3}*u_{a,3}*u_{a,3}*u_{a,3}\n",
+      "(1+0j)*\\bar{u}_{a,0}*\\bar{u}_{a,0}*\\bar{u}_{a,0}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,1}*\\bar{u}_{a,1}*\\bar{u}_{a,1}*\\bar{u}_{a,1}+(1+0j)*\\bar{u}_{a,2}*\\bar{u}_{a,2}*\\bar{u}_{a,2}*\\bar{u}_{a,2}+(1+0j)*\\bar{u}_{a,3}*\\bar{u}_{a,3}*\\bar{u}_{a,3}*\\bar{u}_{a,3}\n",
       "\n",
-      "(1+0j)*u_{a,0}*u_{a,0}*u_{a,2}*u_{a,0}+(1+0j)*u_{a,2}*u_{a,2}*u_{a,2}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,1}*u_{a,3}*u_{a,1}+(1+0j)*u_{a,3}*u_{a,3}*u_{a,3}*u_{a,1}+\n",
+      "(1+0j)*\\bar{u}_{a,0}*\\bar{u}_{a,0}*\\bar{u}_{a,2}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,2}*\\bar{u}_{a,2}*\\bar{u}_{a,2}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,1}*\\bar{u}_{a,1}*\\bar{u}_{a,3}*\\bar{u}_{a,1}+(1+0j)*\\bar{u}_{a,3}*\\bar{u}_{a,3}*\\bar{u}_{a,3}*\\bar{u}_{a,1}+\n",
       "\n",
-      "(1+0j)*u_{a,0}*u_{a,2}*u_{a,2}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,3}*u_{a,3}*u_{a,1}+\n",
+      "(1+0j)*\\bar{u}_{a,0}*\\bar{u}_{a,2}*\\bar{u}_{a,2}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,1}*\\bar{u}_{a,3}*\\bar{u}_{a,3}*\\bar{u}_{a,1}+\n",
       "\n",
       "-----------------------------\n",
-      "(1+0j)*u_{a,0}*u_{a,1}*u_{a,1}*u_{a,0}+(1+0j)*u_{a,2}*u_{a,3}*u_{a,3}*u_{a,2}+\n",
+      "(1+0j)*\\bar{u}_{a,0}*\\bar{u}_{a,1}*\\bar{u}_{a,1}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,2}*\\bar{u}_{a,3}*\\bar{u}_{a,3}*\\bar{u}_{a,2}+\n",
       "\n",
-      "(1+0j)*u_{a,0}*u_{a,1}*u_{a,3}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,1}*u_{a,2}*u_{a,0}+(1+0j)*u_{a,2}*u_{a,3}*u_{a,3}*u_{a,0}+(1+0j)*u_{a,2}*u_{a,2}*u_{a,3}*u_{a,1}+\n",
+      "(1+0j)*\\bar{u}_{a,0}*\\bar{u}_{a,1}*\\bar{u}_{a,3}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,1}*\\bar{u}_{a,1}*\\bar{u}_{a,2}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,2}*\\bar{u}_{a,3}*\\bar{u}_{a,3}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,2}*\\bar{u}_{a,2}*\\bar{u}_{a,3}*\\bar{u}_{a,1}+\n",
       "\n",
-      "(1+0j)*u_{a,0}*u_{a,3}*u_{a,3}*u_{a,0}+(4+0j)*u_{a,1}*u_{a,2}*u_{a,3}*u_{a,0}+(1+0j)*u_{a,1}*u_{a,2}*u_{a,2}*u_{a,1}+\n",
+      "(1+0j)*\\bar{u}_{a,0}*\\bar{u}_{a,3}*\\bar{u}_{a,3}*\\bar{u}_{a,0}+(4+0j)*\\bar{u}_{a,1}*\\bar{u}_{a,2}*\\bar{u}_{a,3}*\\bar{u}_{a,0}+(1+0j)*\\bar{u}_{a,1}*\\bar{u}_{a,2}*\\bar{u}_{a,2}*\\bar{u}_{a,1}+\n",
       "\n"
      ]
     }
